adding description file (redocly)- currently not working but doesn't break anything

--- a/openapi/port-api.yaml
+++ b/openapi/port-api.yaml
@@ -3,6 +3,8 @@ openapi: 3.0.3
 info:
   title: Port API
   version: '0.1'
+  description:
+    $ref: ./description.md
 components:
   securitySchemes:
     bearer:
