--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-beta.22",
-    "@docusaurus/preset-classic": "^2.0.0-beta.22",
-    "@docusaurus/theme-live-codeblock": "^2.0.0-beta.22",
+    "@docusaurus/core": "^2.0.0-rc.1",
+    "@docusaurus/preset-classic": "^2.0.0-rc.1",
+    "@docusaurus/theme-live-codeblock": "^2.0.0-rc.1",
     "@easyops-cn/docusaurus-search-local": "^0.23.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
@@ -27,7 +27,7 @@
     "redocusaurus": "^1.3.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.0.0-beta.22",
+    "@docusaurus/module-type-aliases": "^2.0.0-rc.1",
     "@tsconfig/docusaurus": "^1.0.5",
     "typescript": "^4.6.3"
   },
