--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@docusaurus/core": "^2.1.0",
@@ -29,6 +30,8 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.1.0",
     "@tsconfig/docusaurus": "^1.0.5",
+    "husky": "^8.0.0",
+    "pretty-quick": "^3.1.3",
     "typescript": "^4.6.3"
   },
   "browserslist": {
