--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@docusaurus/theme-live-codeblock": "^2.1.0",
     "@easyops-cn/docusaurus-search-local": "^0.23.3",
     "@mdx-js/react": "^1.6.22",
+    "@stackql/docusaurus-plugin-hubspot": "^1.0.1",
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
