--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@docusaurus/core": "^2.1.0",
     "@docusaurus/plugin-client-redirects": "^2.1.0",
+    "@docusaurus/plugin-ideal-image": "^2.1.0",
     "@docusaurus/preset-classic": "^2.1.0",
     "@docusaurus/theme-live-codeblock": "^2.1.0",
     "@easyops-cn/docusaurus-search-local": "^0.23.3",
