--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "vale docs/**/*.md"
   },
   "dependencies": {
     "@docusaurus/core": "^2.4.1",
