--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@docsly/react": "^1.9.1",
     "@docusaurus/core": "3.0.0",
     "@docusaurus/plugin-client-redirects": "3.0.0",
     "@docusaurus/plugin-ideal-image": "3.0.0",
