--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   },
   "dependencies": {
     "@docsly/react": "^1.9.1",
-    "@docusaurus/core": "3.0.0",
-    "@docusaurus/plugin-client-redirects": "3.0.0",
-    "@docusaurus/plugin-ideal-image": "3.0.0",
-    "@docusaurus/preset-classic": "3.0.0",
-    "@docusaurus/theme-live-codeblock": "3.0.0",
+    "@docusaurus/core": "^3.0.1",
+    "@docusaurus/plugin-client-redirects": "^3.0.1",
+    "@docusaurus/plugin-ideal-image": "^3.0.1",
+    "@docusaurus/preset-classic": "^3.0.1",
+    "@docusaurus/theme-live-codeblock": "^3.0.1",
     "@easyops-cn/docusaurus-search-local": "^0.23.3",
     "@mdx-js/react": "^3.0.0",
     "@stackql/docusaurus-plugin-hubspot": "^1.0.1",
@@ -34,9 +34,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.0.0",
-    "@docusaurus/tsconfig": "3.0.0",
-    "@docusaurus/types": "3.0.0",
+    "@docusaurus/module-type-aliases": "^3.0.1",
+    "@docusaurus/tsconfig": "^3.0.1",
+    "@docusaurus/types": "^3.0.1",
     "husky": "^8.0.0",
     "pretty-quick": "^3.1.3",
     "typescript": "~5.2.2"
