--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@docsly/react": "^1.9.1",
     "@docusaurus/core": "^3.0.1",
     "@docusaurus/plugin-client-redirects": "^3.0.1",
+    "@docusaurus/plugin-google-tag-manager": "^3.1.1",
     "@docusaurus/plugin-ideal-image": "^3.0.1",
     "@docusaurus/preset-classic": "^3.0.1",
     "@docusaurus/theme-live-codeblock": "^3.0.1",
